<resources>
    <string name="app_name">EDMT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="get_started_button">Get Started</string>
    <string name="booking_description_img">Booking description</string>
    <string name="book_title_text">BOOK</string>
    <string name="book_sequence_text">Locate a Car around the city. see car availability on the map and book it through the App</string>
    <string name="welcome1_next_button_text">Next</string>
    <string name="welcome1_skip_button_text">Skip</string>
    <string name="welcome2_unlock_title_text">Unlock</string>
    <string name="welcome2_unlock_text">Use Qr code that sent to your mobile via the app,and unlock the car and and the billing start when the car is unlocked</string>
    <string name="welcome2_next_button">Next</string>
    <string name="welcome2_skip_button">Skip</string>
    <string name="welcome2_qr_image">welcome2 QR image</string>
    <string name="welcome3_ride_title">Ride</string>
    <string name="welcome3_ride_text">Enjoy your ride,And When your done,just park in any nearby garage and lock the car to stop the billing from app</string>
    <string name="welcome3_finish_button">Finish</string>
    <string name="welcome3_ride_image">welcome3 ride image</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_login_button">Log In</string>
    <string name="login_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_signup_button">Sign Up</string>
    <string name="signup_title">Creat Account</string>
    <string name="signup_first_name_text">First Name</string>
    <string name="signup_middle_name_text">Middle Name</string>
    <string name="signup_last_name_text">Last Name</string>
    <string name="signup_email_text">Email</string>
    <string name="signup_password_text">Password</string>
    <string name="signup_confirm_password_text">Confirm password</string>
    <string name="signup_phone_number_text">Phone Number</string>
    <string name="signup_birthdate_text">Birthdate</string>
    <string name="signup_gender_text">Gender</string>
    <string name="signup_card_number_text">Card Number</string>
    <string name="signup_signup_button_text">Sign up</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="Edit_informations">Edit info</string>
    <string name="Trip_history">Trip History</string>
    <string name="Help">Help</string>
    <string name="Faq1">Faq</string>
    <string name="Setting_1">Settings</string>
    <string name="help">Help</string>
    <string name="edit_informations">Edit informations</string>
    <string name="trip_history">Trip History</string>
    <string name="faqs">FAQs</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="controls">Controls</string>
    <string name="others">Others</string>
    <string name="adham_abdelfattah">Adham Abdelfattah</string>
    <string name="verified">Verified</string>
    <string name="signout">Signout</string>
    <string name="menu_about_us">About Us</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="welcome">welcome</string>


    <!-- DROPDOWN BOX -->

    <string-array name="classes">
        <item>Class A</item>
        <item>Class B</item>
        <item>Class C</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>