<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/Edit_informations"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit_informations" />
        <item
            android:id="@+id/Trip_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/trip_history" />



    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/Setting_1"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/Signout_1"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/signout" />
            <item
                android:id="@+id/Help"
                android:icon="@drawable/ic_baseline_perm_phone_msg_24"
                android:title="@string/help" />
            <item
                android:id="@+id/Faq1"
                android:icon="@drawable/ic_baseline_question_answer_24"
                android:title="@string/faqs" />
        </menu>
    </item>
</menu>