<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_About_Us"
        android:name="com.example.edmt.ui.about_us.About_us_Fragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/Help"
        android:name="com.example.edmt.ui.help.Help_Fragment"
        android:label="@string/Help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/Faq1"
        android:name="com.example.edmt.ui.faq.Faq_Fragment"
        android:label="@string/Faq1"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/Setting_1"
        android:name="com.example.edmt.ui.settings.Settings_Fragment"
        android:label="@string/Setting_1"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.edmt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/Edit_informations"
        android:name="com.example.edmt.ui.edit_info.Edit_info_Fragment"
        android:label="Edit informations"
        tools:layout="@layout/fragment_editinfo" />

    <fragment
        android:id="@+id/Trip_history"
        android:name="com.example.edmt.ui.trip_history.Trip_history_Fragment"
        android:label="Trip History"
        tools:layout="@layout/fragment_triphistory" />
</navigation>